# v3ssdk-app

./: README.md  buildapp.sh  cleanapp.sh  linux_docker_build.sh  linux_docker_clean.sh  win_docker_build.bat  win_docker_clean.bat
cam4g/: Makefile  common.c  common.h  main.cpp  network.cpp  network.h  pushpic.cpp  pushpic.h  saveppic.cpp  saveppic.h  serialport.cpp
curl/: Makefile  main.c
demo-camera/: Makefile  cvtcolor.c  cvtcolor.h  demo-camera.c  fbdev.c  fbdev.h  fileutil.c  fileutil.h  font_8x8.c  imutil.c  imutil.h  lcd.c  lcd.h  netdbg.c  netdbg.h  timeutil.c  timeutil.h  usbdbg.c  usbdbg.h  v4l2dev.c  v4l2dev.h
demo-codec/: Makefile  VideoTest.c  VideoTest.h  demo-camera.c  v4l2dev.c  v4l2dev.h
demo-eth/: Makefile  demo-eth.pro  tcpclient.cpp  tcpclient.h  widget.cpp  widget.h  widget.ui
demo-guid/: Makefile  demo-guid  demo-guid.pro  gpio.cpp  gpio.h  main.cpp  moc_widget.cpp  my.qrc  processmgr.cpp  qrc_my.cpp  ui_widget.h  widget.cpp  widget.h  widget.ui
demo-mjpgcloud/: cloud.cfg  connthread.cpp  connthread.h  demo-mjpgsrv.pro  serverthread.cpp  serverthread.h  widget.cpp  widget.h  widget.ui
demo-mjpgsrv/: Makefile  MjpgServerClass.cpp  MjpgServerClass.h  ServerClass.h  demo-mjpgsrv  demo-mjpgsrv.pro  moc_serverthread.cpp  moc_widget.cpp  serverthread.cpp  serverthread.h  ui_widget.h  widget.cpp  widget.h  widget.ui
demo-qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled.pro
demo-router/: Makefile  demo-router  demo-router.pro  img.qrc  moc_serialreadthread.cpp  (+11 more)
facenet/: CMakeLists.txt
facenet/src/: main.cpp  mtcnn.cpp
(+398 files in other folders)
